# RomanoRender2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
dependencies/: CMakeLists.txt
dependencies/imfiledialog/: CMakeLists.txt  ImFileDialog.cpp
dependencies/imgui/: CMakeLists.txt
dependencies/imnodes/: CMakeLists.txt
dependencies/osl/include/OSL/: dual_vec.h  oslconfig.h  oslversion.h
dependencies/osl/include/OSL/Imathx/: Imathx.h
dependencies/osl/lib/: osl.imageio.lib  oslcomp.lib  oslexec.lib  oslnoise.lib  oslquery.lib
dependencies/stb/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  boundingbox.cpp  boundingbox.h  bvh.cpp  bvh.h  camera.cpp  camera.h  embree.cpp  embree.h  glutils.h  main.cpp  mat44.h  material.h  maths.h  objloader.h  ray.h  render.cpp  render.h  settings.h  shading.cpp  shading.h  sphere.cpp  sphere.h  vec3.h
src/application/: CMakeLists.txt  NodeEditor.h  app.cpp  app.h  code_editor.cpp  code_editor.h  menubar.cpp  menubar.h  node_editor.cpp  node_editor.h  outliner.cpp  outliner.h  shortcuts.cpp  shortcuts.h
src/common/: CMakeLists.txt
src/common/algorithms/: CMakeLists.txt
src/common/math/: CMakeLists.txt  mat44.h  math.h  vec2.h  vec2fa.h  vec3fa.h
src/common/simd/: CMakeLists.txt  vboold4_avx.h
src/common/sys/: CMakeLists.txt  intrinsics.h  library.cpp  platform.h  sysinfo.cpp  sysinfo.h  thread.cpp
src/ispc/: CMakeLists.txt  intersectors.h  intersectors.ispc  rand.h  ray_generation.h  ray_generation.ispc
src/renderer/: CMakeLists.txt  render.h  renderer.cpp  renderer.h
src/scene/: CMakeLists.txt  camera.h  scene.cpp  scene.h  settings.h
src/shaders/: image.osl  image.oso  matte.osl  matte.oso  uv.osl  uv.oso
src/shading/: CMakeLists.txt  integrator.h  osl_renderer.cpp  osl_renderer.h  renderer.cpp  renderer.h  sampling.h  shading.cpp  shading.h  shading_utils.cpp  shading_utils.h
src/utils/: CMakeLists.txt  decl.h  embree.cpp  embree.h  glutils.h  logger.h  profiler.h  ray.h
